...
    return rows;
  };

  return (
    <SafeAreaView className="flex-1 bg-background"
      edges={['top']}
      testID="lectures-screen"
    >
      {/* header */}
      <View
        className="w-full bg-[#C03694] p-4 justify-center items-center"
        style={{
          height: 163,
...
