...
  );

  return (
    <SafeAreaView
      className="flex-1 bg-white"
      edges={['top']}
      testID="home-screen"
    >
      <View
        className="flex-row justify-between items-center px-6 py-6 bg-white"
        style={{
          shadowColor: '#000',
          shadowOpacity: 0.05,
...
