...
    setSortOrder(tempSortOrder);
    setCourseFilter(tempCourseFilter);
    setShowFilterModal(false);
  };

  return (
    <SafeAreaView className="flex-1 bg-background" edges={['top']} testID="bulletin-screen">
      {/* header */}
      <View
        className="w-full bg-[#C03694] p-4 justify-center items-center"
        style={{
          height: 163,
          borderBottomLeftRadius: 40,
...
